Stick with old yellow bookmark folder icons on Windows, even in MD.

BUG=633013

Review-Url: https://codereview.chromium.org/2210993002
Cr-Commit-Position: refs/heads/master@{#410171}

Former-commit-id: 055a5526ac6933493707b6c9698d739ab56fb7b1