chrome/browser/ui/bookmarks/bookmark_utils.cc
@@ -93,7 +93,7 @@ BookmarkShortcutDisposition GetBookmarkShortcutDisposition(Profile* profile) {
   return BOOKMARK_SHORTCUT_DISPOSITION_UNCHANGED;
 }
 
-#if defined(TOOLKIT_VIEWS)
+#if defined(TOOLKIT_VIEWS) && !defined(OS_WIN)
 gfx::ImageSkia GetFolderIcon(gfx::VectorIconId id, SkColor text_color) {
   return gfx::CreateVectorIcon(id,
                                color_utils::DeriveDefaultIconColor(text_color));
@@ -284,37 +284,32 @@ bool IsValidBookmarkDropLocation(Profile* profile,
 }
 
 #if defined(TOOLKIT_VIEWS)
+// TODO(bsep): vectorize the Windows versions: crbug.com/564112
 gfx::ImageSkia GetBookmarkFolderIcon(SkColor text_color) {
 #if defined(OS_WIN)
-  if (!ui::MaterialDesignController::IsModeMaterial()) {
-    return *ui::ResourceBundle::GetSharedInstance().GetImageSkiaNamed(
-        IDR_BOOKMARK_BAR_FOLDER);
-  }
-#endif
-
+  return *ui::ResourceBundle::GetSharedInstance().GetImageSkiaNamed(
+      IDR_BOOKMARK_BAR_FOLDER);
+#else
   return GetFolderIcon(gfx::VectorIconId::FOLDER, text_color);
+#endif
 }
 
 gfx::ImageSkia GetBookmarkSupervisedFolderIcon(SkColor text_color) {
 #if defined(OS_WIN)
-  if (!ui::MaterialDesignController::IsModeMaterial()) {
-    return *ui::ResourceBundle::GetSharedInstance().GetImageSkiaNamed(
-        IDR_BOOKMARK_BAR_FOLDER_SUPERVISED);
-  }
-#endif
-
+  return *ui::ResourceBundle::GetSharedInstance().GetImageSkiaNamed(
+      IDR_BOOKMARK_BAR_FOLDER_SUPERVISED);
+#else
   return GetFolderIcon(gfx::VectorIconId::FOLDER_SUPERVISED, text_color);
+#endif
 }
 
 gfx::ImageSkia GetBookmarkManagedFolderIcon(SkColor text_color) {
 #if defined(OS_WIN)
-  if (!ui::MaterialDesignController::IsModeMaterial()) {
-    return *ui::ResourceBundle::GetSharedInstance().GetImageSkiaNamed(
-        IDR_BOOKMARK_BAR_FOLDER_MANAGED);
-  }
-#endif
-
+  return *ui::ResourceBundle::GetSharedInstance().GetImageSkiaNamed(
+      IDR_BOOKMARK_BAR_FOLDER_MANAGED);
+#else
   return GetFolderIcon(gfx::VectorIconId::FOLDER_MANAGED, text_color);
+#endif
 }
 #endif
 
